[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features= ["json] }
rusqlite = { version = "0.26.1", fearures = ["bundled"] }
serde = {version = "1.0.130", features= ["derive] }
serde_json = "1.0.70"
